syntax = "proto3";
package iscp2.v1;

enum ResultCode {
  option allow_alias = true;

  SUCCEEDED = 0;
  NORMAL_CLOSURE = 0;
  INCOMPATIBLE_VERSION = 1;
  MAXIMUM_DATA_ID_ALIAS = 2;
  MAXIMUM_UPSTREAM_ALIAS = 3;

  UNSPECIFIED_ERROR = 64;
  NO_NODE_ID = 65;
  AUTH_FAILED = 66;
  CONNECT_TIMEOUT = 67;
  MALFORMED_MESSAGE = 68;
  PROTOCOL_ERROR = 69;
  ACK_TIMEOUT = 70;
  INVALID_PAYLOAD = 71;
  INVALID_DATA_ID = 72;
  INVALID_DATA_ID_ALIAS = 73;
  INVALID_DATA_FILTER = 74;
  STREAM_NOT_FOUND = 75;
  RESUME_REQUEST_CONFLICT = 76;
  PROCESS_FAILED = 77;
  DESIRED_QOS_NOT_SUPPORTED = 78;
  PING_TIMEOUT = 79;
  TOO_LARGE_MESSAGE_SIZE = 80;
  TOO_MANY_DATA_ID_ALIASES = 81;
  TOO_MANY_STREAMS = 82;
  TOO_LONG_ACK_INTERVAL = 83;
  TOO_MANY_DOWNSTREAM_FILTERS = 84;
  TOO_MANY_DATA_FILTERS = 85;
  TOO_LONG_EXPIRY_INTERVAL = 86;
  TOO_LONG_PING_TIMEOUT = 87;
  TOO_SHORT_PING_INTERVAL = 88;
  TOO_SHORT_PING_TIMEOUT = 89;
  RATE_LIMIT_REACHED = 90;

  NODE_ID_MISMATCH = 128;
  SESSION_NOT_FOUND = 129;
  SESSION_ALREADY_CLOSED = 130;
  SESSION_CANNOT_CLOSED = 131;
}
